tests/fail/semantic/product_invalid_field_access.cyt
atom Value(x: int, y: int)
atom Result(res: int)

enzyme InvalidFieldAccess[a: Value] -> Result(res: a.z)

// args: --no-colour

// expected stderr:
// error: invalid field `z` on atom type `Value`
//   ┌─ ../tests/fail/semantic/product_invalid_field_access.cyt:4:54
//   │
// 1 │ atom Value(x: int, y: int)
//   │      ----- field not present in this atom
//   ·
// 4 │ enzyme InvalidFieldAccess[a: Value] -> Result(res: a.z)
//   │                                                      ^ no such field on type `Value`